funcionalidad buscar por Identificador

--- a/Front-End/src/pages/home.html
+++ b/Front-End/src/pages/home.html
@@ -12,9 +12,10 @@
   <body>
     <header>
       <button id="cart-button">
-        <img src="../assets/icons/cart-icon.svg" alt="Carrito" />
+        <img class="carrito" src="../assests/img/cart-shopping-solid.svg" width="25px" height="25px" alt="Carrito" /> 
         <span id="cart-count">0</span>
       </button>
+       <a href="buscar.html"><img class="lupa" src="../assests/img/magnifying-glass-solid.svg" width="25px" height="25px" alt="buscador" /></a>  
     </header>
     <div class="product-container">
       <h2>Productos</h2>
