se genero el consumo del backend para guardar en la tabla de rompimiento en la bd

--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -17,6 +17,12 @@
         <button type="submit">Login</button>
       </form>
       <div id="error-message"></div>
+      <div class="register-link">
+        <p>
+          No tienes una cuenta?
+          <a href="/Front-End/src/pages/Administrar.html">Regístrate aquí</a>
+        </p>
+      </div>
     </div>
     <script src="assest/script.js"></script>
   </body>
