--- a/Front-End/src/pages/Administrar.html
+++ b/Front-End/src/pages/Administrar.html
@@ -6,7 +6,7 @@
     <title>Registro de Personas</title>
     <link
       rel="stylesheet"
-      href="/Front-End/src/assests/css/administrar/stiles.css"
+      href="/Front-End/src/assests/administrar/stiles.css"
     />
   </head>
   <body>
@@ -30,21 +30,30 @@
         <label for="identificacion">Identificación:</label>
         <input type="text" id="identificacion" name="identificacion" required />
 
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required />
-
         <label for="telefono">Teléfono:</label>
         <input type="tel" id="telefono" name="telefono" required />
 
         <label for="tipoIdentificacion">Tipo de Identificación:</label>
-        <select id="tipoIdentificacion" name="tipoIdentificacion" required></select>
+        <select
+          id="tipoIdentificacion"
+          name="tipoIdentificacion"
+          required
+        ></select>
+
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required />
 
         <button type="submit">Registrar</button>
       </form>
       <div id="responseMessage"></div>
     </div>
-    <script src="/Front-End/src/assests/css/administrar/script.js"></script>
-    <script src="/Front-End/src/assests/css/administrar/datos.js"></script>
-    <script src="../assests/js/validacion.js"></script>
+    <script
+      src="/Front-End/src/assests/administrar/script.js"
+      type="module"
+    ></script>
+    <script src="/Front-End/src/assests/administrar/datos.js"></script>
   </body>
 </html>
