creacion de ventanas FRONT-END

--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -20,7 +20,7 @@
       <div class="register-link">
         <p>
           No tienes una cuenta?
-          <a href="/Front-End/src/pages/Administrar.html">Regístrate aquí</a>
+          <a href="./registro.html">Regístrate aquí</a>
         </p>
       </div>
     </div>
