--- a/Front-End/src/pages/Administrar.html
+++ b/Front-End/src/pages/Administrar.html
@@ -99,14 +99,14 @@
           />
           <span>Marcas</span>
         </button>
-        <a href="buscar.html">
+        <button id="asignarRoles">
           <img
             class="icon"
-            src="../assests/images/buscar-icon.png"
-            alt="Buscador"
+            src="../assests/images/marca-icon.png"
+            alt="asignarRoles"
           />
-          <span>Buscar</span>
-        </a>
+          <span>Asignar Roles</span>
+        </button>
       </aside>
       <main class="main-content">
         <h1>Registro de Personas</h1>
