--- a/Front-End/src/pages/Tipo_Pagos.html
+++ b/Front-End/src/pages/Tipo_Pagos.html
@@ -95,14 +95,14 @@
           />
           <span>Marcas</span>
         </button>
-        <a href="buscar.html">
+        <button id="asignarRoles">
           <img
             class="icon"
-            src="../assests/images/buscar-icon.png"
-            alt="Buscador"
+            src="../assests/images/marca-icon.png"
+            alt="asignarRoles"
           />
-          <span>Buscar</span>
-        </a>
+          <span>Asignar Roles</span>
+        </button>
       </aside>
       <main class="main-content">
         <h1>Tipos de Pago</h1>
